[gd_scene load_steps=16 format=3 uid="uid://0h02cxapaytq"]

[ext_resource type="Script" path="res://Scripts/UI/Player Selection/P1Select.gd" id="1_8v6yf"]
[ext_resource type="Script" path="res://Scripts/UI/ModifierPlayButton.gd" id="2_i5d18"]
[ext_resource type="Texture2D" uid="uid://tulqc4vxju8l" path="res://Sprites/BackArrow.png" id="3_ojoyc"]
[ext_resource type="Script" path="res://Scripts/UI/ModifierBackButton.gd" id="4_efgvg"]
[ext_resource type="Texture2D" uid="uid://bdaqhq1u8kxw" path="res://Sprites/Scug1nochoose.png" id="5_chenq"]
[ext_resource type="Texture2D" uid="uid://coam47xs7lh54" path="res://Sprites/Scug.png" id="6_aol7f"]
[ext_resource type="Texture2D" uid="uid://okoyc6qmk2bg" path="res://Sprites/Scug2nochoose.png" id="7_uwjmx"]
[ext_resource type="Texture2D" uid="uid://cl8ifukgeglmg" path="res://Sprites/Scug2.png" id="8_jitkp"]
[ext_resource type="Texture2D" uid="uid://dvd38rxnjklhe" path="res://Sprites/Scug3nochoose.png" id="9_8lfwy"]
[ext_resource type="Texture2D" uid="uid://sm2n565dcbxa" path="res://Sprites/Scug3.png" id="10_d5ebb"]
[ext_resource type="Texture2D" uid="uid://bgs1hel61ibnq" path="res://Sprites/Scug4nochoose.png" id="11_6ge4a"]
[ext_resource type="Texture2D" uid="uid://jnldje555juf" path="res://Sprites/Scug4.png" id="12_677y4"]
[ext_resource type="Script" path="res://Scripts/Secrets/Clam.gd" id="13_lf0ho"]
[ext_resource type="Script" path="res://Scripts/Secrets/DOG.gd" id="13_ufcak"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yd0k2"]

[node name="Modifiers&Players" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -575.0
offset_top = -324.0
offset_right = 578.0
offset_bottom = 323.0
script = ExtResource("1_8v6yf")
metadata/_edit_use_anchors_ = true

[node name="Play Button" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.829858
anchor_top = 0.875906
anchor_right = 0.962148
anchor_bottom = 0.949454
offset_left = 0.17395
offset_top = 0.28894
offset_right = -0.356079
offset_bottom = -0.296997
action_mode = 0
text = "Play"
script = ExtResource("2_i5d18")
metadata/_edit_use_anchors_ = true

[node name="Back Button" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0992845
anchor_top = 0.920451
anchor_right = 0.0992845
anchor_bottom = 0.920451
offset_left = -76.475
offset_top = -22.532
offset_right = 77.525
offset_bottom = 22.468
action_mode = 0
text = "Back"
icon = ExtResource("3_ojoyc")
expand_icon = true
script = ExtResource("4_efgvg")
metadata/_edit_use_anchors_ = true

[node name="P1" type="TextureButton" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.554
anchor_top = 0.217
anchor_right = 0.554
anchor_bottom = 0.217
offset_left = -54.762
offset_top = -54.399
offset_right = 54.238
offset_bottom = 54.601
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("5_chenq")
texture_pressed = ExtResource("6_aol7f")

[node name="P2" type="TextureButton" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.67
anchor_top = 0.217
anchor_right = 0.67
anchor_bottom = 0.217
offset_left = -54.51
offset_top = -54.399
offset_right = 54.49
offset_bottom = 54.601
toggle_mode = true
texture_normal = ExtResource("7_uwjmx")
texture_pressed = ExtResource("8_jitkp")

[node name="P3" type="TextureButton" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.787
anchor_top = 0.217
anchor_right = 0.787
anchor_bottom = 0.217
offset_left = -54.4111
offset_top = -54.399
offset_right = 54.5889
offset_bottom = 54.601
toggle_mode = true
texture_normal = ExtResource("9_8lfwy")
texture_pressed = ExtResource("10_d5ebb")

[node name="P4" type="TextureButton" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.902
anchor_top = 0.219
anchor_right = 0.902
anchor_bottom = 0.219
offset_left = -54.0061
offset_top = -54.693
offset_right = 54.9939
offset_bottom = 54.307
toggle_mode = true
texture_normal = ExtResource("11_6ge4a")
texture_pressed = ExtResource("12_677y4")

[node name="Modifiers" type="RichTextLabel" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.158
anchor_top = 0.051
anchor_right = 0.158
anchor_bottom = 0.051
offset_left = -142.174
offset_top = -18.997
offset_right = 171.826
offset_bottom = 53.003
theme_override_font_sizes/normal_font_size = 52
text = "Modifiers
"
fit_content = true
scroll_active = false

[node name="Clam" type="RichTextLabel" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.158
anchor_top = 0.051
anchor_right = 0.158
anchor_bottom = 0.051
offset_left = 185.826
offset_top = 532.003
offset_right = 689.826
offset_bottom = 748.003
theme_override_font_sizes/normal_font_size = 52
text = "Calamity Active!

"
fit_content = true
scroll_active = false
script = ExtResource("13_lf0ho")

[node name="Players" type="RichTextLabel" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.158
anchor_top = 0.051
anchor_right = 0.158
anchor_bottom = 0.051
offset_left = 569.826
offset_top = -18.997
offset_right = 883.826
offset_bottom = 53.003
theme_override_font_sizes/normal_font_size = 52
text = "Players"
fit_content = true
scroll_active = false

[node name="Maps" type="RichTextLabel" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.158
anchor_top = 0.051
anchor_right = 0.158
anchor_bottom = 0.051
offset_left = 593.826
offset_top = 209.003
offset_right = 728.826
offset_bottom = 281.003
theme_override_font_sizes/normal_font_size = 52
text = "Maps"
fit_content = true
scroll_active = false

[node name="Map Container" type="GridContainer" parent="Buttons"]
layout_mode = 0
offset_left = 575.0
offset_top = 324.0
offset_right = 1151.0
offset_bottom = 527.0

[node name="Map1" type="CheckButton" parent="Buttons/Map Container"]
layout_mode = 2
button_pressed = true
text = "Map 1"

[node name="Map2" type="CheckButton" parent="Buttons/Map Container"]
layout_mode = 2
text = "Map 2"

[node name="Map3" type="CheckButton" parent="Buttons/Map Container"]
layout_mode = 2
text = "Map 3"

[node name="Map4" type="CheckButton" parent="Buttons/Map Container"]
layout_mode = 2
text = "Map 4"

[node name="Map5" type="CheckButton" parent="Buttons/Map Container"]
layout_mode = 2
text = "Map 5"

[node name="Modifiers Container" type="GridContainer" parent="Buttons"]
layout_mode = 0
offset_top = 94.0
offset_right = 372.0
offset_bottom = 208.0

[node name="Blackout Button" type="CheckButton" parent="Buttons/Modifiers Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
theme_override_styles/focus = SubResource("StyleBoxEmpty_yd0k2")
action_mode = 0
text = "Blackout "
expand_icon = true

[node name="SmashBros Button" type="CheckButton" parent="Buttons/Modifiers Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
theme_override_styles/focus = SubResource("StyleBoxEmpty_yd0k2")
action_mode = 0
text = "Lossful Air controls "
expand_icon = true

[node name="Impaction" type="CheckButton" parent="Buttons/Modifiers Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
theme_override_styles/focus = SubResource("StyleBoxEmpty_yd0k2")
action_mode = 0
text = "Bomb Impacts
"
expand_icon = true

[node name="Crumble" type="CheckButton" parent="Buttons/Modifiers Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
theme_override_styles/focus = SubResource("StyleBoxEmpty_yd0k2")
action_mode = 0
text = "Crumble
"
expand_icon = true

[node name="Sweeper" type="CheckButton" parent="Buttons/Modifiers Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
theme_override_styles/focus = SubResource("StyleBoxEmpty_yd0k2")
action_mode = 0
text = "Sweeper
"
expand_icon = true
script = ExtResource("13_ufcak")

[node name="Ice" type="CheckButton" parent="Buttons/Modifiers Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
theme_override_styles/focus = SubResource("StyleBoxEmpty_yd0k2")
action_mode = 0
text = "Slippery"
expand_icon = true

[node name="Fog" type="CheckButton" parent="Buttons/Modifiers Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
theme_override_styles/focus = SubResource("StyleBoxEmpty_yd0k2")
action_mode = 0
text = "Fog of War"
expand_icon = true

[connection signal="pressed" from="Buttons/Play Button" to="Buttons/Play Button" method="_on_pressed"]
[connection signal="pressed" from="Buttons/Back Button" to="Buttons/Back Button" method="_on_pressed"]
[connection signal="pressed" from="Buttons/P1" to="Buttons" method="_on_p_1_pressed"]
[connection signal="pressed" from="Buttons/P2" to="Buttons" method="_on_p_2_pressed"]
[connection signal="pressed" from="Buttons/P3" to="Buttons" method="_on_p_3_pressed"]
[connection signal="pressed" from="Buttons/P4" to="Buttons" method="_on_p_4_pressed"]
[connection signal="toggled" from="Buttons/Map Container/Map1" to="Buttons" method="_on_map_1_toggled"]
[connection signal="toggled" from="Buttons/Map Container/Map2" to="Buttons" method="_on_map_2_toggled"]
[connection signal="toggled" from="Buttons/Map Container/Map3" to="Buttons" method="_on_map_3_toggled"]
[connection signal="toggled" from="Buttons/Map Container/Map4" to="Buttons" method="_on_map_4_toggled"]
[connection signal="toggled" from="Buttons/Map Container/Map5" to="Buttons" method="_on_map_5_toggled"]
[connection signal="pressed" from="Buttons/Modifiers Container/Blackout Button" to="Buttons" method="_on_blackout_button_pressed"]
[connection signal="pressed" from="Buttons/Modifiers Container/SmashBros Button" to="Buttons" method="_on_smash_bros_button_pressed"]
[connection signal="pressed" from="Buttons/Modifiers Container/Impaction" to="Buttons" method="_on_impaction_pressed"]
[connection signal="pressed" from="Buttons/Modifiers Container/Crumble" to="Buttons" method="_on_crumble_pressed"]
[connection signal="pressed" from="Buttons/Modifiers Container/Sweeper" to="Buttons" method="_on_sweeper_pressed"]
[connection signal="pressed" from="Buttons/Modifiers Container/Ice" to="Buttons" method="_on_ice_pressed"]
[connection signal="pressed" from="Buttons/Modifiers Container/Fog" to="Buttons" method="_on_fog_pressed"]
